# job-agent-git

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: live-greenhouse-validation.yml
config/: candidate_profile.example.json  candidate_profile.json  career_evidence.json  search_preferences.greenhouse.example.json  search_preferences.json
data/sample_jobs/: jobs.json
src/job_agent/: __init__.py  audit.py  calibration.py  cli.py  io.py  live_validation.py  matching.py  models.py  persistence.py  profile.py  title_matching.py
src/job_agent/application_adapters/: base.py
src/job_agent/llm/: prompts.py
src/job_agent/resume/: engine.py
src/job_agent/sources/: __init__.py  base.py  greenhouse.py  local_json.py
tests/: test_greenhouse.py  test_live_validation.py  test_matching.py  test_preparation.py  test_title_matching.py
