[project]
name = "job-agent"
version = "0.1.0"
description = "Local-first AI-assisted job search and application preparation agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "typer>=0.12,<1",
  "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]
pdf = ["weasyprint>=62,<63"]

[project.scripts]
job-agent = "job_agent.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
